--- a/notebooks/DALL-E.ipynb
+++ b/notebooks/DALL-E.ipynb
@@ -24,11 +24,148 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "sdTCEMO2s8qQ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: openai in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.27.4)\n",
+            "Requirement already satisfied: aiohttp in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from openai) (3.8.4)\n",
+            "Requirement already satisfied: tqdm in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from openai) (4.65.0)\n",
+            "Requirement already satisfied: requests>=2.20 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from openai) (2.28.2)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.20->openai) (3.1.0)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.20->openai) (1.26.15)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.20->openai) (2023.5.7)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.20->openai) (3.4)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from aiohttp->openai) (23.1.0)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from aiohttp->openai) (1.3.3)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from aiohttp->openai) (6.0.4)\n",
+            "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from aiohttp->openai) (1.3.1)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from aiohttp->openai) (1.9.2)\n",
+            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from aiohttp->openai) (4.0.2)\n",
+            "Requirement already satisfied: colorama in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from tqdm->openai) (0.4.6)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 23.0.1 -> 23.1.2\n",
+            "[notice] To update, run: C:\\Users\\amitp\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: requests in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (2.28.2)"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 23.0.1 -> 23.1.2\n",
+            "[notice] To update, run: C:\\Users\\amitp\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests) (3.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests) (2023.5.7)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests) (1.26.15)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests) (3.1.0)\n",
+            "Requirement already satisfied: pillow in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (9.3.0)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 23.0.1 -> 23.1.2\n",
+            "[notice] To update, run: C:\\Users\\amitp\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting azure-identity\n",
+            "  Downloading azure_identity-1.13.0-py3-none-any.whl (151 kB)\n",
+            "     ---------------------------------------- 0.0/151.6 kB ? eta -:--:--\n",
+            "     ------------------ -------------------- 71.7/151.6 kB 1.3 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ----------------------------------- -- 143.4/151.6 kB 2.1 MB/s eta 0:00:01\n",
+            "     ------------------------------------ 151.6/151.6 kB 158.8 kB/s eta 0:00:00\n",
+            "Collecting cryptography>=2.5\n",
+            "  Using cached cryptography-41.0.1-cp37-abi3-win_amd64.whl (2.6 MB)\n",
+            "Collecting msal<2.0.0,>=1.20.0\n",
+            "  Downloading msal-1.22.0-py2.py3-none-any.whl (90 kB)\n",
+            "     ---------------------------------------- 0.0/90.0 kB ? eta -:--:--\n",
+            "     ---------------------------------------- 90.0/90.0 kB 5.0 MB/s eta 0:00:00\n",
+            "Collecting msal-extensions<2.0.0,>=0.3.0\n",
+            "  Downloading msal_extensions-1.0.0-py2.py3-none-any.whl (19 kB)\n",
+            "Requirement already satisfied: six>=1.12.0 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from azure-identity) (1.16.0)\n",
+            "Collecting azure-core<2.0.0,>=1.11.0\n",
+            "  Downloading azure_core-1.27.1-py3-none-any.whl (174 kB)\n",
+            "     ---------------------------------------- 0.0/174.5 kB ? eta -:--:--\n",
+            "     ------------------------------------- 174.5/174.5 kB 11.0 MB/s eta 0:00:00\n",
+            "Requirement already satisfied: requests>=2.18.4 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from azure-core<2.0.0,>=1.11.0->azure-identity) (2.28.2)\n",
+            "Requirement already satisfied: typing-extensions>=4.3.0 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from azure-core<2.0.0,>=1.11.0->azure-identity) (4.5.0)\n",
+            "Collecting cffi>=1.12\n",
+            "  Downloading cffi-1.15.1-cp310-cp310-win_amd64.whl (179 kB)\n",
+            "     ---------------------------------------- 0.0/179.1 kB ? eta -:--:--\n",
+            "     ------------------------------------- 179.1/179.1 kB 11.3 MB/s eta 0:00:00\n",
+            "Collecting PyJWT[crypto]<3,>=1.0.0\n",
+            "  Downloading PyJWT-2.7.0-py3-none-any.whl (22 kB)\n",
+            "Collecting portalocker<3,>=1.6\n",
+            "  Using cached portalocker-2.7.0-py2.py3-none-any.whl (15 kB)\n",
+            "Collecting pycparser\n",
+            "  Using cached pycparser-2.21-py2.py3-none-any.whl (118 kB)\n",
+            "Requirement already satisfied: pywin32>=226 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from portalocker<3,>=1.6->msal-extensions<2.0.0,>=0.3.0->azure-identity) (306)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.18.4->azure-core<2.0.0,>=1.11.0->azure-identity) (1.26.15)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.18.4->azure-core<2.0.0,>=1.11.0->azure-identity) (3.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.18.4->azure-core<2.0.0,>=1.11.0->azure-identity) (2023.5.7)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\amitp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.18.4->azure-core<2.0.0,>=1.11.0->azure-identity) (3.1.0)\n",
+            "Installing collected packages: PyJWT, pycparser, portalocker, cffi, azure-core, cryptography, msal, msal-extensions, azure-identity\n",
+            "Successfully installed PyJWT-2.7.0 azure-core-1.27.1 azure-identity-1.13.0 cffi-1.15.1 cryptography-41.0.1 msal-1.22.0 msal-extensions-1.0.0 portalocker-2.7.0 pycparser-2.21\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 23.0.1 -> 23.1.2\n",
+            "[notice] To update, run: C:\\Users\\amitp\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+          ]
+        }
+      ],
       "source": [
         "! pip install openai\n",
         "# We need requests to retrieve the generated image\n",
@@ -294,6 +431,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -309,15 +449,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.10.11"
     },
     "vscode": {
       "interpreter": {
         "hash": "3a5103089ab7e7c666b279eeded403fcec76de49a40685dbdfe9f9c78ad97c17"
       }
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
